# vbsopt

./: README.md  expand_dataset.py  experiments.py  pyproject.toml
samples/: g1_strreverse_split_join.vbs  g1_strreverse_split_join__combo.vbs  g1_strreverse_split_join__noise.vbs  g1_strreverse_split_join__split.vbs  g2_hex_helper_chunks.vbs  g2_hex_helper_chunks__combo.vbs  g2_hex_helper_chunks__noise.vbs  g2_hex_helper_chunks__split.vbs  g3_replace_wrapper.vbs  g3_replace_wrapper__combo.vbs  g3_replace_wrapper__noise.vbs  g3_replace_wrapper__split.vbs  g4_execute_literal.vbs  g4_execute_literal__combo.vbs  g4_execute_literal__noise.vbs  g4_execute_literal__split.vbs  g5_execute_base64.vbs  g5_execute_base64__combo.vbs  g5_execute_base64__noise.vbs  g5_execute_base64__split.vbs  g6_reverse_array_combo.vbs  g6_reverse_array_combo__combo.vbs  g6_reverse_array_combo__noise.vbs  g6_reverse_array_combo__split.vbs  g7_branch_alias_cse.vbs  g7_branch_alias_cse__combo.vbs  g7_branch_alias_cse__noise.vbs  g7_branch_alias_cse__split.vbs  g8_unhex_helper.vbs  g8_unhex_helper__combo.vbs  g8_unhex_helper__noise.vbs  g8_unhex_helper__split.vbs  metadata.json  provenance.md  r1_scpc_dual_base64.hta  r1_scpc_dual_base64__combo.hta  r1_scpc_dual_base64__noise.hta  r1_scpc_dual_base64__split.hta  r2_eset_heavy_hta.hta  r2_eset_heavy_hta__combo.hta  (+55 more)
tests/: test_pipeline.py  test_quarantine_external_sample.py
tools/: validate_external_sample.py
vbsopt/: __init__.py  ast_nodes.py  ast_render.py  baseline.py  cli.py  evaluation.py  ioc.py  ir.py  ir_opt.py  lexer.py  parser.py  passes.py  (+3 more)
